--- a/Web Quiz Engine/Lots of quizzes/task-info.yaml
+++ b/Web Quiz Engine/Lots of quizzes/task-info.yaml
@@ -235,5 +235,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/91/stages/505/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/91/stages/505/implement">JetBrains
+    Academy</a>
+  time: Thu, 23 Jul 2020 15:13:31 UTC
 record: -1
