--- a/Web Quiz Engine/Moving quizzes to DB/task-info.yaml
+++ b/Web Quiz Engine/Moving quizzes to DB/task-info.yaml
@@ -457,6 +457,13 @@ files:
         }
     }
   learner_created: false
+- name: src/engine/repository/QuizRepository.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/91/stages/507/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/91/stages/507/implement">JetBrains
+    Academy</a>
+  time: Fri, 24 Jul 2020 16:59:42 UTC
 record: -1
