--- a/Web Quiz Engine/Advanced queries/task-info.yaml
+++ b/Web Quiz Engine/Advanced queries/task-info.yaml
@@ -1,30 +1,6 @@
 type: edu
 custom_name: stage6
 files:
-- name: build.gradle
-  visible: true
-  text: |
-    plugins {
-        id 'org.springframework.boot' version '2.2.2.RELEASE'
-        id 'java'
-    }
-
-    apply plugin: 'io.spring.dependency-management'
-
-    sourceCompatibility = '11'
-
-    repositories {
-        mavenCentral()
-    }
-
-    sourceSets.main.resources.srcDirs = ["src/resources"]
-
-    dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter'
-        implementation 'org.springframework.boot:spring-boot-starter-actuator'
-        compile("org.springframework.boot:spring-boot-starter-web")
-    }
-  learner_created: false
 - name: src/engine/WebQuizEngine.java
   visible: true
   text: |
@@ -786,6 +762,43 @@ files:
         }
     }
   learner_created: false
+- name: build.gradle
+  visible: true
+  text: |
+    plugins {
+        id 'org.springframework.boot' version '2.2.2.RELEASE'
+        id 'java'
+    }
+
+    apply plugin: 'io.spring.dependency-management'
+
+    sourceCompatibility = '11'
+
+    repositories {
+        mavenCentral()
+    }
+
+    sourceSets.main.resources.srcDirs = ["src/resources"]
+
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+        compile("org.springframework.boot:spring-boot-starter-web")
+    }
+  learner_created: false
+- name: src/engine/domain/CompletedQuiz.java
+  visible: true
+  learner_created: true
+- name: src/engine/repository/CompletedQuizRepository.java
+  visible: true
+  learner_created: true
+- name: src/engine/controller/dto/CompletedResponse.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/91/stages/509/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/91/stages/509/implement">JetBrains
+    Academy</a>
+  time: Tue, 28 Jul 2020 18:30:43 UTC
 record: -1
